Spacing below main title fix.

--- a/blocks/image-content-grid/image-content-grid.css
+++ b/blocks/image-content-grid/image-content-grid.css
@@ -117,7 +117,7 @@ main .image-content-grid-container .main-image-content-grid-wrapper {
   .image-content-grid-container .image-content-grid-wrapper > h2 {
     margin: unset;
     margin-top: var(--spacer-element-07);
-    margin-bottom: var(--spacer-element-08);
+    margin-bottom: var(--spacer-element-10);
     width: 100%;
   }
 
